crates/unsoundness_checker/tests/snapshots/typing_overload_used/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> snippet_01.py:3:1
  |
1 | from typing import overload
2 |
3 | @overload
  | ^^^^^^^^^
4 | def add(a: int, b: int) -> int: ...
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> snippet_01.py:6:1
  |
4 | def add(a: int, b: int) -> int: ...
5 |
6 | @overload
  | ^^^^^^^^^
7 | def add(a: float, b: float) -> float: ...
  |
info: rule `typing-overload-used` was selected in the configuration file
